# DigCNV

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_DigCNV.py  run_digcnv.ipynb  setup.py
DigCNV/: CNVision.py  DigCNV.py  DigCnvPreProcessing.py  DigCnvTunning.py  dataPreparation.py  dataVerif.py  digCnvModel.py  utils.py
DigCNV.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DigCNV/DigCNV.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
DigCNV/data/: example_callrates.tsv  example_cnvs.tsv
DigCNV/scripts/: CNVision_format_merge_ukbb.pl
DigCNVlib/: DigCnvPreProcessing.py  DigCnvTunning.py  dataPreparation.py  dataVerif.py  digCNV_logger.py  run_DigCNV.py
data/: SegDup_filtres_Ok_Oct.map  UKBB_clean_for_DigCNV.tsv  callrates.tsv  example_cnvs.tsv
digcnv/: CNVision.py  DigCnvPreProcessing.py  DigCnvTunning.py  __main__.py  dataPreparation.py  dataVerif.py  digCNV_logger.py  digCnvModel.py  utils.py
digcnv/DigCNV.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_dataPreparation.py
